<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_trees_ros</name>
  <version>2.1.1</version>
  <description>
    ROS2 extensions and behaviours for py_trees.
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">https://py-trees-ros.readthedocs.io/en/release-1.2.x/</url>
  <url type="repository">https://github.com/stonier/py_trees_ros</url>
  <url type="bugtracker">https://github.com/stonier/py_trees_ros/issues</url>

  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python3-setuptools</build_depend>

  <!-- <test_depend>python3-pytest</test_depend> -->

  <!-- <doc_depend>python3-sphinx</doc_depend> -->
  <!-- <doc_depend>python3-sphinx-argparse</doc_depend> -->
  <!-- <doc_depend>python3-sphinx-rtd-theme</doc_depend> -->

  <depend>rospy</depend>

  <!-- core dependencies -->
  <exec_depend>custom-py-trees-pip</exec_depend>
  <exec_depend>py_trees_ros_interfaces</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>

  <!-- behaviour dependencies (subscribers, transforms, ...) -->
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>  <!-- monitor this, might migrate to a python only package -->

  <!-- testing dependencies -->

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
